[tool.poetry]
name = "bohr-ui"
version = "0.1.0"
description = ""
authors = ["giganticode <hlibbabii@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3"
streamlit = "1.3.1"
jsonlines = "3.0.0"
seaborn = "0.11.2"
scikit-learn = "^0.22"
bohr-runtime = { git = "https://github.com/giganticode/bohr-runtime", branch = "master" }
dvc = "2.0.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
